 - Fixed an incorrect statement about WriteRepeatedSymbolsWriteVertically that $0C should
   be either $00 or $01, when actuality should be $00 or $02.
 - Updated the info on WriteRepeatedSymbolsWriteVertically this time mentioning that the
   position inputs refer to the top tile extending downwards for downwards and the bottom tile
   extending upwards when extending upwards.
 - Code blocks in the main readme now uses CSS overflows and re-sizable for ease of reading.
 - Added full explanation about stripe tiles crossing tilemap screen border.
 - Corrected various incorrect info on the warmup: "$7E0EF9-$7E0F2E" should be "$7E0EF9-$7E0F2F"
   and in "Create an ASM file to run under" stated that the LDA and STA values should be
 - Added info about subroutine "WriteStringDigitsToHUD" in the main HTML file
 - Fixed a bug on SpriteHUDTest.asm when set to display 2 numbers and the player presses right,
   would increment the high word of the first of the two numbers when it should only increment
   only the second number, due to a typo on the if statement on determining should the increment
   be 16-bit or 32-bit.
 - Added to the HTML file what was missing was the subroutines that convert status bar characters
   to overworld border characters.
 - Fixed an issue where if you simply set !OverWorldBorderBlankTile to any other value besides
   $1F, the routines "SixteenBitHexDecDivisionToOWB" and "ThirtyTwoBitHexDecDivisionToOWB"
   wouldn't update to that because I forgot to make it use such a define.
 - Added signed HexDec routines. These handles a two's complement values.
 - Added 16x8 ("bonus stars" number) support.
05-02-2025 v3.2.1
 - Fixed an oversight that I forgot to update the HTML formatting (content centered rather than
   on the left edge of the viewport) for other HTML files.
 - Updated the link to a youtube video "Binary to decimal can’t be that hard, right?" to point to
   a more appropriate video time.